# ephemeral

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yaml  ephemeral.sh  pyproject.toml  setup.py
behave/: Dockerfile  Makefile  Pipfile
behave/features/: add_message.feature  home.feature  show_message.feature
behave/features/steps/: add_message.py  common.py  show_message.py
ephemeral/: data.py  wsgi.py
ephemeral/static/: main.css
ephemeral/templates/: add.html  base.html  link.html  pin.html  root.html  show.html
src/ephemeral/: data.py  wsgi.py
src/ephemeral/templates/: add.html  not_found.html  pin.html
tests/: test_data.py
